--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -20,10 +20,15 @@
     <%= form.label :message %>
     <%= form.text_area :message %>
   </div>
-  
+
   <div class="field">
   <%= form.label :name %>
   <%= form.text_field :name %>
+  </div>
+
+  <div class="field">
+  <%= form.label :password %>
+  <%= form.text_field :password %>
   </div>
 
   <div class="actions">
